--- a/.env
+++ b/.env
@@ -1,17 +1,20 @@
-POSTGRES0_PORT="5400"
-POSTGRES0_HOST="127.0.0.1"
-POSTGRES0_USER="postgres"
-POSTGRES0_PASSWORD="password"
-POSTGRES0_DB="postgres"
+POSTGRES_DB0_HOST="127.0.0.1"
+POSTGRES_DB0_PORT="5400"
+POSTGRES_DB0_USER="postgres"
+POSTGRES_DB0_PASSWORD="password"
+POSTGRES_DB0_DB="postgres"
 
-POSTGRES1_PORT="5401"
-POSTGRES1_HOST="127.0.0.1"
-POSTGRES1_USER="postgres"
-POSTGRES1_PASSWORD="password"
-POSTGRES1_DB="postgres"
+POSTGRES_DB1_HOST="127.0.0.1"
+POSTGRES_DB1_PORT="5401"
+POSTGRES_DB1_USER="postgres"
+POSTGRES_DB1_PASSWORD="password"
+POSTGRES_DB1_DB="postgres"
 
-POSTGRES2_PORT="5402"
-POSTGRES2_HOST="127.0.0.1"
-POSTGRES2_USER="postgres"
-POSTGRES2_PASSWORD="password"
-POSTGRES2_DB="postgres"
+POSTGRES_DB2_HOST="127.0.0.1"
+POSTGRES_DB2_PORT="5402"
+POSTGRES_DB2_USER="postgres"
+POSTGRES_DB2_PASSWORD="password"
+POSTGRES_DB2_DB="postgres"
+
+REDIS_DB0_HOST="127.0.0.1"
+REDIS_DB0_PORT="6300"
