--- a/.env
+++ b/.env
@@ -18,3 +18,6 @@ POSTGRES_DB2_DB="postgres"
 
 REDIS_DB0_HOST="127.0.0.1"
 REDIS_DB0_PORT="6300"
+
+BITMAP_DB0_HOST="127.0.0.1"
+BITMAP_DB0_PORT="61010"
