--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ejz/storage",
     "description": "",
-    "keywords": ["ejz", "storage"],
+    "keywords": [],
     "license": "WTFPL",
     "repositories": [
         {
@@ -11,15 +11,14 @@
     ],
     "authors": [],
     "require": {
-        "php": ">=7.2.0",
-        "phpunit/phpunit": "^8.1",
-        "composer/composer": "^1.8",
-        "amphp/amp": "^2.2",
-        "amphp/postgres": "^1.0",
-        "ejz/rediscache": "~1.0"
+        "php": ">=7.4.0",
+        "ejz/rediscache": "~1.0",
+        "amphp/amp": "^2.4"
     },
     "require-dev": {
-        "vlucas/phpdotenv": "~2.0"
+        "vlucas/phpdotenv": "~2.0",
+        "phpunit/phpunit": "^9.1",
+        "composer/composer": "^1.10"
     },
     "autoload": {
         "psr-4": {
